tests/samples/negative/functions/missing_return.ax
module missing_return;

fn value() -> i32 {
  let answer: i32 = 42;
}

fn main() -> i32 {
  return value();
}
